优化：查询列表待办项添加swagger
